@@ -8,11 +8,11 @@ if __FILE__ == $PROGRAM_NAME
   InitWindow(screenWidth, screenHeight, "Yet Another Ruby-raylib bindings - heightmap loading and drawing")
 
   camera = Camera.new
-  camera[:position] = Vector3.create(18.0, 18.0, 18.0)
-  camera[:target] = Vector3.create(0.0, 0.0, 0.0)
-  camera[:up] = Vector3.create(0.0, 1.0, 0.0)
-  camera[:fovy] = 45.0
-  camera[:projection] = CAMERA_PERSPECTIVE
+             .with_position(18.0, 18.0, 18.0)
+             .with_target(0.0, 0.0, 0.0)
+             .with_up(0.0, 1.0, 0.0)
+             .with_fovy(45.0)
+             .with_projection(CAMERA_PERSPECTIVE)
 
   image = LoadImage(RAYLIB_MODELS_PATH + "resources/heightmap.png") # Load heightmap image (RAM)
   texture = LoadTextureFromImage(image)                             # Convert image to texture (VRAM)
