@@ -6,11 +6,11 @@ if __FILE__ == $PROGRAM_NAME
 
   # Define the camera to look into our 3d world
   camera = Camera.new
-  camera.position.set(5.0, 5.0, 5.0)
-  camera.target.set(0.0, 2.0, 0.0)
-  camera.up.set(0.0, 1.0, 0.0)
-  camera.fovy = 45.0
-  camera.projection = CAMERA_PERSPECTIVE
+             .with_position(5.0, 5.0, 5.0)
+             .with_target(0.0, 2.0, 0.0)
+             .with_up(0.0, 1.0, 0.0)
+             .with_fovy(45.0)
+             .with_projection(CAMERA_PERSPECTIVE)
 
   model = LoadModel(RAYLIB_MODELS_PATH + "resources/models/gltf/robot.glb")
 
